# IGVC

./: .gitignore  README.md  camera.py  node3.py
astar_nav/: README.md  astar_nav.py  pyproject.toml  setup.py
astar_nav/astar_nav/: __init__.py  core.py  costmaps.py  transforms.py  visualization.py
ros2_ws/src/littleblue_sim/: CMakeLists.txt  run_sims.py
ros2_ws/src/littleblue_sim/config/: bridge.yaml
ros2_ws/src/littleblue_sim/finish_line/: finish_line.py
ros2_ws/src/littleblue_sim/launch/: chicane1.launch.py  empty_straight_lane.launch.py  figureS.launch.py  full_course.launch.py  large_sim.launch.py  race_track.launch.py  ramp.launch.py  straight_lane_obstacles1.launch.py  straight_lane_obstacles2.launch.py  straight_lane_obstacles3.launch.py  straight_lane_obstacles4.launch.py  template.launch.py  unit_sim.launch.py  world_builder.launch.py
ros2_ws/src/littleblue_sim/models/line_boundary_visible/: model.sdf
ros2_ws/src/littleblue_sim/models/ramp/: model.sdf
ros2_ws/src/littleblue_sim/pass_or_fail/: pass_or_fail.py
ros2_ws/src/littleblue_sim/urdf/: chassis.xacro  gazebo_plugins.xacro  littleblue.urdf.xacro  sensors.xacro
ros2_ws/src/littleblue_sim/worlds/chicane1/: chicane1.sdf
ros2_ws/src/littleblue_sim/worlds/empty_straight_lane/: empty_straight_lane.sdf  empty_straight_lane.world
ros2_ws/src/littleblue_sim/worlds/empty_straight_lane/custom_models/floor/: model.sdf
ros2_ws/src/littleblue_sim/worlds/figureS/: figureS.world
ros2_ws/src/littleblue_sim/worlds/full_course/: full_course.world
ros2_ws/src/littleblue_sim/worlds/ramp/: ramp.world
ros2_ws/src/littleblue_sim/worlds/ramp/custom_models/ramp/: model.config  model.sdf
ros2_ws/src/littleblue_sim/worlds/straight_lane_obstacles1/: straight_lane_obstacles1.sdf  straight_lane_obstacles1.world
ros2_ws/src/littleblue_sim/worlds/straight_lane_obstacles2/: straight_lane_obstacles2.sdf  straight_lane_obstacles2.world
ros2_ws/src/littleblue_sim/worlds/straight_lane_obstacles2/custom_models/barrel/: model.config
ros2_ws/src/littleblue_sim/worlds/straight_lane_obstacles3/: straight_lane_obstacles3.sdf  straight_lane_obstacles3.world
ros2_ws/src/littleblue_sim/worlds/straight_lane_obstacles3/custom_models/cone/: model.config
ros2_ws/src/littleblue_sim/worlds/straight_lane_obstacles4/: straight_lane_obstacles4.sdf  straight_lane_obstacles4.world
ros2_ws/src/littleblue_sim/worlds/straight_lane_obstacles4/custom_models/cone/: model.sdf
ros2_ws/src/littleblue_sim/worlds/template/: template.sdf
ros2_ws/src/littleblue_sim/worlds/unit_sims/chicane1/: chicane1.world  config.yaml
ros2_ws/src/littleblue_sim/worlds/unit_sims/empty_straight_lane/: config.yaml
ros2_ws/src/littleblue_sim/worlds/unit_sims/ramp/: ramp.sdf  ramp.world
ros2_ws/src/littleblue_sim/worlds/unit_sims/straight_lane_obstacles2/: config.yaml  straight_lane_obstacles2.world
ros2_ws/src/littleblue_sim/worlds/unit_sims/straight_lane_obstacles3/: straight_lane_obstacles3.world
ros2_ws/src/littleblue_sim/worlds/unit_sims/template/: config.yaml  template.world
ros2_ws/src/skid_steer_robot/: CMakeLists.txt  package.xml  run_sims.py  run_single_sim.py
ros2_ws/src/skid_steer_robot/finish_line/: finish_line.py
ros2_ws/src/skid_steer_robot/launch/: custom_world_template.launch.py  empty_straight_lane.launch.py  mohamed_playing.launch.py  ramp.launch.py  ramp_tester.launch.py  short_run.launch.py  small_course.launch.py  small_course_no_barrels.launch.py  straight_lane_obstacles1.launch.py  straight_lane_obstacles4.launch.py  test.launch.py
ros2_ws/src/skid_steer_robot/urdf/: cameras.xacro  lidar.xacro
ros2_ws/src/skid_steer_robot/worlds/custom_world_template/: change_me.world
ros2_ws/src/skid_steer_robot/worlds/empty_straight_lane/: empty_straight_lane.world
ros2_ws/src/skid_steer_robot/worlds/figureS/: figureS.world
ros2_ws/src/skid_steer_robot/worlds/figureS/custom_models/floor/: model.config
ros2_ws/src/skid_steer_robot/worlds/mohamed_playing/: mohamed_playing.world
ros2_ws/src/skid_steer_robot/worlds/new_world/: new_world copy.world  new_world.world
ros2_ws/src/skid_steer_robot/worlds/race_track/: race_track.world
ros2_ws/src/skid_steer_robot/worlds/race_track/models/ramp/: model.sdf
ros2_ws/src/skid_steer_robot/worlds/ramp/custom_models/floor/: model.sdf
ros2_ws/src/skid_steer_robot/worlds/ramp_tester/: change_me.world  ramp_tester.world
ros2_ws/src/skid_steer_robot/worlds/ramp_tester/models/barrel/: model.config
ros2_ws/src/skid_steer_robot/worlds/short_run/: short_run.world
ros2_ws/src/skid_steer_robot/worlds/small_course/: small_course.world
ros2_ws/src/skid_steer_robot/worlds/small_course/floor/: model.sdf
ros2_ws/src/skid_steer_robot/worlds/small_course_no_barrels/: small_course_no_barrels.world
ros2_ws/src/skid_steer_robot/worlds/straight_lane_obstacles3/: straight_lane_obstacles3.world
ros2_ws/src/skid_steer_robot/worlds/template/: template.world
ros2_ws/src/skid_steer_robot/worlds/test/: test.world
ros2_ws/src/workbench/startup_robot/: DEPLOY.md  install_deps.sh  package.xml  setup.cfg  setup.py
ros2_ws/src/workbench/startup_robot/config/: course.yaml  ekf.yaml
ros2_ws/src/workbench/startup_robot/launch/: deploy.launch.py  robot.launch.py
ros2_ws/src/workbench/startup_robot/scripts/: world_pose_from_ekf.py
ros2_ws/src/workbench/startup_robot/udev/: 99-littleblue.rules
ros2_ws/src/workbench/startup_robot/urdf/: littleblue_deploy.urdf.xacro
ros2_ws/src/workbench/temp_container/littleblue_vision/: package.xml  setup.cfg  setup.py
ros2_ws/src/workbench/temp_container/littleblue_vision/launch/: vision.launch.py
ros2_ws_mark/src/littleblue_sim/: CMakeLists.txt  package.xml
ros2_ws_mark/src/littleblue_sim/config/: bridge.yaml
ros2_ws_mark/src/littleblue_sim/launch/: rviz.launch.py  sim.launch.py
ros2_ws_mark/src/littleblue_sim/models/ramp/: model.config
ros2_ws_mark/src/littleblue_sim/urdf/: chassis.xacro  gazebo_plugins.xacro  materials.xacro  sensors.xacro
ros2_ws_mark/src/littleblue_sim/worlds/: igvc_autonav.sdf  igvc_autonav2.sdf  igvc_course.sdf
(+229 files in other folders)
