<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>startup_robot</name>
  <version>0.0.0</version>
  <description>Starts robot's ROS2 nodes</description>
  <maintainer email="adugu001@odu.edu">Andrew</maintainer>
  <license>[TODO]</license>

  <depend>example_pkg</depend>
<!--
  <depend>[DEPENDENCY_2]</depend>
-->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>